# Battleship-Engine

./: BoardCalculations.cpp  BoardCalculations.h  BoardState.cpp  BoardState.h  CMakeLists.txt  ControlButton.qml  Main.qml  README.md  gamegridcontroller.cpp  gamegridcontroller.h  heatmapTile.qml  heatmapcontroller.cpp  heatmapcontroller.h  heatmapworker.cpp  heatmapworker.h  infoMapTile.qml  informationmapcontroller.cpp  informationmapcontroller.h  main.cpp  statecontroller.cpp  statecontroller.h  tile.qml
